[2022-46] Updated all the notebooks to reread the revised cases into the new DB. The revised cases could successfully be reread (with exception of 2 cases).

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
@@ -55,13 +55,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/HI_Aarau_Birshof_ST. Anna.xlsx', hospital_name_db='Hirslanden Aarau', year='2018', sheet='Aarau 2018')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/HI_Aarau_Birshof_ST. Anna.xlsx', hospital_name_db='Hirslanden Klinik Aarau', year='2018', sheet='Aarau 2018')\n"
      ]
     }
    ],
    "source": [
     "file_info = FileInfo(os.path.join(ROOT_DIR, 'raw_data/HI_Aarau_Birshof_ST. Anna.xlsx'),\n",
-    "                     'Hirslanden Aarau', '2018', 'Aarau 2018')\n",
+    "                     'Hirslanden Klinik Aarau', '2018', 'Aarau 2018')\n",
     "\n",
     "print(file_info)"
    ]
@@ -81,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:32:47.151 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
-      "2022-11-14 09:32:47.155 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-21 08:54:52.801 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 17 cases for Hirslanden Klinik Aarau 2018\n",
+      "2022-11-21 08:54:52.806 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -113,13 +113,13 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-14 09:32:47.159 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-14 09:32:47.161 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:32:47.163 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-14 09:32:47.166 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-14 09:32:47.166 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-14 09:32:47.169 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:32:47.172 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-21 08:54:52.811 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-21 08:54:52.814 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 08:54:52.817 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-21 08:54:52.819 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 08:54:52.819 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 08:54:52.824 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 08:54:52.826 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -522,7 +522,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:32:51.221 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
+      "2022-11-21 08:54:55.804 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:95 - Read 10098 rows from the DB, for the hospital 'Hirslanden Klinik Aarau' in 2018\n"
      ]
     },
     {
@@ -590,8 +590,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:32:51.676 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 17 cases ...\n",
-      "2022-11-14 09:32:52.581 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
+      "2022-11-21 08:54:56.289 | INFO     | src.revised_case_normalization.notebook_functions.group:group:86 - Grouping 17 cases ...\n",
+      "2022-11-21 08:54:57.955 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:91 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
      ]
     }
    ],
@@ -643,7 +643,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>431229</td>\n",
+       "      <td>70234</td>\n",
        "      <td>F59B</td>\n",
        "      <td>2.55</td>\n",
        "      <td>0.97</td>\n",
@@ -652,7 +652,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>431363</td>\n",
+       "      <td>70368</td>\n",
        "      <td>F71A</td>\n",
        "      <td>1.12</td>\n",
        "      <td>1.12</td>\n",
@@ -661,7 +661,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>431860</td>\n",
+       "      <td>70864</td>\n",
        "      <td>F62B</td>\n",
        "      <td>1.30</td>\n",
        "      <td>1.30</td>\n",
@@ -670,7 +670,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>432553</td>\n",
+       "      <td>71555</td>\n",
        "      <td>F03C</td>\n",
        "      <td>4.90</td>\n",
        "      <td>4.90</td>\n",
@@ -679,7 +679,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>432647</td>\n",
+       "      <td>71647</td>\n",
        "      <td>F62B</td>\n",
        "      <td>1.30</td>\n",
        "      <td>1.30</td>\n",
@@ -688,7 +688,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>433607</td>\n",
+       "      <td>72607</td>\n",
        "      <td>F59B</td>\n",
        "      <td>2.55</td>\n",
        "      <td>1.50</td>\n",
@@ -697,7 +697,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>433746</td>\n",
+       "      <td>72746</td>\n",
        "      <td>L63B</td>\n",
        "      <td>1.09</td>\n",
        "      <td>1.09</td>\n",
@@ -706,7 +706,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>433916</td>\n",
+       "      <td>72916</td>\n",
        "      <td>L60C</td>\n",
        "      <td>1.40</td>\n",
        "      <td>1.40</td>\n",
@@ -715,7 +715,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>434365</td>\n",
+       "      <td>73365</td>\n",
        "      <td>I10A</td>\n",
        "      <td>2.66</td>\n",
        "      <td>2.66</td>\n",
@@ -724,7 +724,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>435248</td>\n",
+       "      <td>74245</td>\n",
        "      <td>F06C</td>\n",
        "      <td>3.84</td>\n",
        "      <td>3.84</td>\n",
@@ -733,7 +733,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>435532</td>\n",
+       "      <td>74529</td>\n",
        "      <td>L63B</td>\n",
        "      <td>1.09</td>\n",
        "      <td>1.09</td>\n",
@@ -742,7 +742,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>436128</td>\n",
+       "      <td>75123</td>\n",
        "      <td>F59B</td>\n",
        "      <td>2.55</td>\n",
        "      <td>1.50</td>\n",
@@ -751,7 +751,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>436628</td>\n",
+       "      <td>75622</td>\n",
        "      <td>F59B</td>\n",
        "      <td>2.55</td>\n",
        "      <td>1.50</td>\n",
@@ -760,7 +760,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>438069</td>\n",
+       "      <td>77062</td>\n",
        "      <td>I06C</td>\n",
        "      <td>3.90</td>\n",
        "      <td>3.90</td>\n",
@@ -769,7 +769,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>439313</td>\n",
+       "      <td>78305</td>\n",
        "      <td>L63B</td>\n",
        "      <td>1.09</td>\n",
        "      <td>1.09</td>\n",
@@ -778,7 +778,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>439801</td>\n",
+       "      <td>78793</td>\n",
        "      <td>H01A</td>\n",
        "      <td>5.04</td>\n",
        "      <td>5.04</td>\n",
@@ -787,7 +787,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>440991</td>\n",
+       "      <td>79983</td>\n",
        "      <td>E05A</td>\n",
        "      <td>3.39</td>\n",
        "      <td>3.39</td>\n",
@@ -800,23 +800,23 @@
       ],
       "text/plain": [
        "    aimedic_id   drg  drg_cost_weight  effective_cost_weight  pccl revision_date\n",
-       "0       431229  F59B             2.55                   0.97     4    2022-12-31\n",
-       "1       431363  F71A             1.12                   1.12     4    2022-12-31\n",
-       "2       431860  F62B             1.30                   1.30     4    2022-12-31\n",
-       "3       432553  F03C             4.90                   4.90     4    2022-12-31\n",
-       "4       432647  F62B             1.30                   1.30     4    2022-12-31\n",
-       "5       433607  F59B             2.55                   1.50     4    2022-12-31\n",
-       "6       433746  L63B             1.09                   1.09     4    2022-12-31\n",
-       "7       433916  L60C             1.40                   1.40     4    2022-12-31\n",
-       "8       434365  I10A             2.66                   2.66     4    2022-12-31\n",
-       "9       435248  F06C             3.84                   3.84     4    2022-12-31\n",
-       "10      435532  L63B             1.09                   1.09     4    2022-12-31\n",
-       "11      436128  F59B             2.55                   1.50     4    2022-12-31\n",
-       "12      436628  F59B             2.55                   1.50     4    2022-12-31\n",
-       "13      438069  I06C             3.90                   3.90     4    2022-12-31\n",
-       "14      439313  L63B             1.09                   1.09     4    2022-12-31\n",
-       "15      439801  H01A             5.04                   5.04     4    2022-12-31\n",
-       "16      440991  E05A             3.39                   3.39     4    2022-12-31"
+       "0        70234  F59B             2.55                   0.97     4    2022-12-31\n",
+       "1        70368  F71A             1.12                   1.12     4    2022-12-31\n",
+       "2        70864  F62B             1.30                   1.30     4    2022-12-31\n",
+       "3        71555  F03C             4.90                   4.90     4    2022-12-31\n",
+       "4        71647  F62B             1.30                   1.30     4    2022-12-31\n",
+       "5        72607  F59B             2.55                   1.50     4    2022-12-31\n",
+       "6        72746  L63B             1.09                   1.09     4    2022-12-31\n",
+       "7        72916  L60C             1.40                   1.40     4    2022-12-31\n",
+       "8        73365  I10A             2.66                   2.66     4    2022-12-31\n",
+       "9        74245  F06C             3.84                   3.84     4    2022-12-31\n",
+       "10       74529  L63B             1.09                   1.09     4    2022-12-31\n",
+       "11       75123  F59B             2.55                   1.50     4    2022-12-31\n",
+       "12       75622  F59B             2.55                   1.50     4    2022-12-31\n",
+       "13       77062  I06C             3.90                   3.90     4    2022-12-31\n",
+       "14       78305  L63B             1.09                   1.09     4    2022-12-31\n",
+       "15       78793  H01A             5.04                   5.04     4    2022-12-31\n",
+       "16       79983  E05A             3.39                   3.39     4    2022-12-31"
       ]
      },
      "execution_count": 7,
@@ -843,13 +843,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:32:52.599 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 17 cases into the 'Revisions' table ...\n",
-      "2022-11-14 09:32:53.836 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 17 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-14 09:32:53.939 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 17 cases into the 'Revisions' table\n",
-      "2022-11-14 09:32:53.944 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
-      "2022-11-14 09:32:55.506 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 168 rows into the 'Diagnoses' table\n",
-      "2022-11-14 09:32:55.508 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 108 rows into the 'Procedures' table ...\n",
-      "2022-11-14 09:32:56.668 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 108 rows into the 'Procedures' table\n"
+      "2022-11-21 08:54:57.972 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:259 - Trying to insert 17 cases into the 'Revisions' table ...\n",
+      "2022-11-21 08:54:59.521 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:296 - Inserted 17 cases into the 'Revisions' table\n",
+      "2022-11-21 08:54:59.524 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:309 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
+      "2022-11-21 08:55:03.537 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:347 - Inserted 168 rows into the 'Diagnoses' table\n",
+      "2022-11-21 08:55:03.537 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:358 - Trying to insert 108 rows into the 'Procedures' table ...\n",
+      "2022-11-21 08:55:07.496 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:404 - Inserted 108 rows into the 'Procedures' table\n"
      ]
     }
    ],
