--- a/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Birshof_2017_normalization.ipynb
@@ -55,13 +55,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/HI_Aarau_Birshof_ST. Anna.xlsx', hospital_name_db='Hirslanden Birshof', year='2017', sheet='Birshof_2017')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/HI_Aarau_Birshof_ST. Anna.xlsx', hospital_name_db='Hirslanden Klinik Birshof', year='2017', sheet='Birshof_2017')\n"
      ]
     }
    ],
    "source": [
     "file_info = FileInfo(os.path.join(ROOT_DIR, 'raw_data/HI_Aarau_Birshof_ST. Anna.xlsx'),\n",
-    "                     'Hirslanden Birshof', '2017', 'Birshof_2017')\n",
+    "                     'Hirslanden Klinik Birshof', '2017', 'Birshof_2017')\n",
     "\n",
     "print(file_info)"
    ]
@@ -81,8 +81,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:35:21.214 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 4 cases for Hirslanden Birshof 2017\n",
-      "2022-11-14 09:35:21.219 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-21 08:58:49.174 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 4 cases for Hirslanden Klinik Birshof 2017\n",
+      "2022-11-21 08:58:49.180 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "datum                                                string\n",
       "tranche                                              string\n",
       "case_id                                              object\n",
@@ -113,13 +113,13 @@
       "ablehnung kasse                                      string\n",
       "case_id_norm                                         object\n",
       "dtype: object\n",
-      "2022-11-14 09:35:21.224 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-14 09:35:21.226 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:35:21.228 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-14 09:35:21.230 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-14 09:35:21.231 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-14 09:35:21.234 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:35:21.237 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-21 08:58:49.184 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-21 08:58:49.186 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 08:58:49.188 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-21 08:58:49.190 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 08:58:49.190 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 08:58:49.194 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 08:58:49.197 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -275,7 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:35:21.970 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 3653 rows from the DB, for the hospital 'Hirslanden Birshof' in 2017\n"
+      "2022-11-21 08:58:50.511 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:95 - Read 3652 rows from the DB, for the hospital 'Hirslanden Klinik Birshof' in 2017\n"
      ]
     },
     {
@@ -321,7 +321,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20243</td>\n",
+       "      <td>159379</td>\n",
        "      <td>0041497128</td>\n",
        "      <td>M4807</td>\n",
        "      <td>[G553, M4217, M4787, M513, D6980, ...]</td>\n",
@@ -341,7 +341,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20498</td>\n",
+       "      <td>159634</td>\n",
        "      <td>0041332448</td>\n",
        "      <td>T845</td>\n",
        "      <td>[Y849, B956, I1090, I8080]</td>\n",
@@ -361,7 +361,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21005</td>\n",
+       "      <td>160141</td>\n",
        "      <td>0041319879</td>\n",
        "      <td>M4726</td>\n",
        "      <td>[G552, G9581, M4316, I1090, K219, ...]</td>\n",
@@ -381,7 +381,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22492</td>\n",
+       "      <td>161627</td>\n",
        "      <td>0041371186</td>\n",
        "      <td>T845</td>\n",
        "      <td>[Y828, B957, T840, I1190, E1190, ...]</td>\n",
@@ -405,10 +405,10 @@
       ],
       "text/plain": [
        "   aimedic_id     case_id primary_diagnosis                     secondary_diagnoses  primary_procedure                                                                                secondary_procedures gender  age_years  age_days  gestation_age  duration_of_stay  ventilation_hours grouper_admission_type admission_date  admission_weight grouper_discharge_type discharge_date\n",
-       "0       20243  0041497128             M4807  [G553, M4217, M4787, M513, D6980, ...]     8107::20171026     [889714::20171026, 030939::20171026, 784986::20171026, 845111::20171026, 805111::20171026, ...]      M         67         0              0                 7                  0                     01     2017-10-26                 0                     00     2017-11-02\n",
-       "1       20498  0041332448              T845              [Y849, B956, I1090, I8080]    8153:L:20170328                                            [803510:L:20170327, 887951::20170327, 819231:L:20170328]      W         57         0              0                12                  0                     01     2017-03-26                 0                     00     2017-04-07\n",
-       "2       21005  0041319879             M4726  [G552, G9581, M4316, I1090, K219, ...]     8108::20170322     [816210::20170322, 030934::20170322, 805110::20170322, 845110::20170322, 785035::20170322, ...]      W         72         0              0                 5                  0                     01     2017-03-22                 0                     00     2017-03-27\n",
-       "3       22492  0041371186              T845   [Y828, B957, T840, I1190, E1190, ...]  815121:R:20170518  [800515:R:20170518, 776520:R:20170518, 780512:R:20170518, 890A12::20170518, 992214::20170519, ...]      M         59         0              0                22                  0                     01     2017-05-18                 0                     00     2017-06-09"
+       "0      159379  0041497128             M4807  [G553, M4217, M4787, M513, D6980, ...]     8107::20171026     [889714::20171026, 030939::20171026, 784986::20171026, 845111::20171026, 805111::20171026, ...]      M         67         0              0                 7                  0                     01     2017-10-26                 0                     00     2017-11-02\n",
+       "1      159634  0041332448              T845              [Y849, B956, I1090, I8080]    8153:L:20170328                                            [803510:L:20170327, 887951::20170327, 819231:L:20170328]      W         57         0              0                12                  0                     01     2017-03-26                 0                     00     2017-04-07\n",
+       "2      160141  0041319879             M4726  [G552, G9581, M4316, I1090, K219, ...]     8108::20170322     [816210::20170322, 030934::20170322, 805110::20170322, 845110::20170322, 785035::20170322, ...]      W         72         0              0                 5                  0                     01     2017-03-22                 0                     00     2017-03-27\n",
+       "3      161627  0041371186              T845   [Y828, B957, T840, I1190, E1190, ...]  815121:R:20170518  [800515:R:20170518, 776520:R:20170518, 780512:R:20170518, 890A12::20170518, 992214::20170519, ...]      M         59         0              0                22                  0                     01     2017-05-18                 0                     00     2017-06-09"
       ]
      },
      "execution_count": 4,
@@ -453,8 +453,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:35:22.416 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 4 cases ...\n",
-      "2022-11-14 09:35:23.309 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 4 cases into: 4 revisions, 39 diagnoses rows, 42 procedure rows\n"
+      "2022-11-21 08:58:50.913 | INFO     | src.revised_case_normalization.notebook_functions.group:group:86 - Grouping 4 cases ...\n",
+      "2022-11-21 08:58:51.874 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:91 - Grouped 4 cases into: 4 revisions, 39 diagnoses rows, 42 procedure rows\n"
      ]
     }
    ],
@@ -506,7 +506,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20243</td>\n",
+       "      <td>159379</td>\n",
        "      <td>I06B</td>\n",
        "      <td>5.16</td>\n",
        "      <td>5.16</td>\n",
@@ -515,7 +515,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20498</td>\n",
+       "      <td>159634</td>\n",
        "      <td>I46A</td>\n",
        "      <td>2.66</td>\n",
        "      <td>2.66</td>\n",
@@ -524,7 +524,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21005</td>\n",
+       "      <td>160141</td>\n",
        "      <td>I09A</td>\n",
        "      <td>3.87</td>\n",
        "      <td>3.87</td>\n",
@@ -533,7 +533,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>22492</td>\n",
+       "      <td>161627</td>\n",
        "      <td>I03A</td>\n",
        "      <td>4.28</td>\n",
        "      <td>4.28</td>\n",
@@ -546,10 +546,10 @@
       ],
       "text/plain": [
        "   aimedic_id   drg  drg_cost_weight  effective_cost_weight  pccl revision_date\n",
-       "0       20243  I06B             5.16                   5.16     4    2022-12-31\n",
-       "1       20498  I46A             2.66                   2.66     4    2022-12-31\n",
-       "2       21005  I09A             3.87                   3.87     4    2022-12-31\n",
-       "3       22492  I03A             4.28                   4.28     4    2022-12-31"
+       "0      159379  I06B             5.16                   5.16     4    2022-12-31\n",
+       "1      159634  I46A             2.66                   2.66     4    2022-12-31\n",
+       "2      160141  I09A             3.87                   3.87     4    2022-12-31\n",
+       "3      161627  I03A             4.28                   4.28     4    2022-12-31"
       ]
      },
      "execution_count": 7,
@@ -576,13 +576,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:35:23.327 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 4 cases into the 'Revisions' table ...\n",
-      "2022-11-14 09:35:25.144 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 4 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-14 09:35:25.268 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 4 cases into the 'Revisions' table\n",
-      "2022-11-14 09:35:25.270 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 39 rows into the 'Diagnoses' table ...\n",
-      "2022-11-14 09:35:26.690 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 39 rows into the 'Diagnoses' table\n",
-      "2022-11-14 09:35:26.694 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 42 rows into the 'Procedures' table ...\n",
-      "2022-11-14 09:35:27.751 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 42 rows into the 'Procedures' table\n"
+      "2022-11-21 08:58:51.892 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:259 - Trying to insert 4 cases into the 'Revisions' table ...\n",
+      "2022-11-21 08:58:53.296 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:296 - Inserted 4 cases into the 'Revisions' table\n",
+      "2022-11-21 08:58:53.298 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:309 - Trying to insert 39 rows into the 'Diagnoses' table ...\n",
+      "2022-11-21 08:58:55.514 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:347 - Inserted 39 rows into the 'Diagnoses' table\n",
+      "2022-11-21 08:58:55.516 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:358 - Trying to insert 42 rows into the 'Procedures' table ...\n",
+      "2022-11-21 08:58:57.624 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:404 - Inserted 42 rows into the 'Procedures' table\n"
      ]
     }
    ],
