--- a/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2017_normalization.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Revised case normalization for Winterthur 2017\n",
+    "# Revised case normalization for Kantonsspital Winterthur 2017\n",
     "\n",
     "Notes:\n",
     "\n",
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='KSW', year='2017', sheet='Änderungen _Winterthur_2017')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='Kantonsspital Winterthur', year='2017', sheet='Änderungen _Winterthur_2017')\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
     "\n",
     "file_info = FileInfo(\n",
     "         os.path.join(ROOT_DIR, 'raw_data/Winterthur.xlsx'),\n",
-    "         'KSW',\n",
+    "         'Kantonsspital Winterthur',\n",
     "         '2017',\n",
     "         'Änderungen _Winterthur_2017')\n",
     "\n",
@@ -84,8 +84,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:56:19.228 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 218 cases for KSW 2017\n",
-      "2022-11-14 09:56:19.232 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-21 09:31:22.158 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 218 cases for Kantonsspital Winterthur 2017\n",
+      "2022-11-21 09:31:22.167 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "fid                       string\n",
@@ -116,12 +116,12 @@
       "kasse                     string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-14 09:56:19.278 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-14 09:56:19.287 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:56:19.297 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-14 09:56:19.306 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-14 09:56:19.306 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-14 09:56:19.324 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 10 rows were affected:\n",
+      "2022-11-21 09:31:22.180 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-21 09:31:22.190 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 09:31:22.200 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-21 09:31:22.210 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 09:31:22.211 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 09:31:22.228 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 10 rows were affected:\n",
       "row 55: primary diagnosis D382 => C450\n",
       "row 74: primary diagnosis I652 => I631\n",
       "row 110: primary diagnosis K5732 => K5720\n",
@@ -132,7 +132,7 @@
       "row 177: primary diagnosis I1190 => I1310\n",
       "row 200: primary diagnosis I489 => I5001\n",
       "row 205: primary diagnosis I1200 => E1173\n",
-      "2022-11-14 09:56:19.328 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-21 09:31:22.231 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -424,8 +424,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:56:21.473 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 26985 rows from the DB, for the hospital 'KSW' in 2017\n",
-      "2022-11-14 09:56:21.495 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 2 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender', 'patient_id']\n"
+      "2022-11-21 09:31:30.318 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:95 - Read 26908 rows from the DB, for the hospital 'Kantonsspital Winterthur' in 2017\n",
+      "2022-11-21 09:31:30.341 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:51 - 2 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender', 'patient_id']\n"
      ]
     },
     {
@@ -471,7 +471,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>88497</td>\n",
+       "      <td>729810</td>\n",
        "      <td>21712640027</td>\n",
        "      <td>N390</td>\n",
        "      <td>[B962, E86, N1791, N183, I1090, ...]</td>\n",
@@ -491,7 +491,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>88511</td>\n",
+       "      <td>729824</td>\n",
        "      <td>20197613027</td>\n",
        "      <td>I480</td>\n",
        "      <td>[I1190, Z954, I7020, Z9588, E1190, ...]</td>\n",
@@ -511,7 +511,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>88636</td>\n",
+       "      <td>729949</td>\n",
        "      <td>21945623027</td>\n",
        "      <td>N40</td>\n",
        "      <td>[N3941, N184, E871, I1000, K920]</td>\n",
@@ -531,7 +531,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>88652</td>\n",
+       "      <td>729965</td>\n",
        "      <td>21395996027</td>\n",
        "      <td>K565</td>\n",
        "      <td>[Z960, I1090, Z855, R18, A099, ...]</td>\n",
@@ -551,7 +551,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>88658</td>\n",
+       "      <td>729971</td>\n",
        "      <td>20418260027</td>\n",
        "      <td>J100</td>\n",
        "      <td>[N390, B962, R471, E876, E871, ...]</td>\n",
@@ -575,11 +575,11 @@
       ],
       "text/plain": [
        "   aimedic_id      case_id primary_diagnosis                      secondary_diagnoses primary_procedure                              secondary_procedures gender  age_years  age_days  gestation_age  duration_of_stay  ventilation_hours grouper_admission_type admission_date  admission_weight grouper_discharge_type discharge_date\n",
-       "0       88497  21712640027              N390     [B962, E86, N1791, N183, I1090, ...]                                                                  []      W         90         0              0                 1                  0                     01     2017-04-23                 0                     00     2017-04-24\n",
-       "1       88511  20197613027              I480  [I1190, Z954, I7020, Z9588, E1190, ...]  890A42::20170926                                  [9969::20171002]      W         91         0              0                10                  0                     01     2017-09-25                 0                     00     2017-10-05\n",
-       "2       88636  21945623027               N40         [N3941, N184, E871, I1000, K920]    6022::20170802                                  [5718::20170802]      M         76         0              0                 3                  0                     01     2017-08-02                 0                     00     2017-08-05\n",
-       "3       88652  21395996027              K565      [Z960, I1090, Z855, R18, A099, ...]    5459::20171221  [5425::20171221, 9607::20171220, 9915::20171222]      M         71         0              0                11                  0                     01     2017-12-20                 0                     00     2017-12-31\n",
-       "4       88658  20418260027              J100      [N390, B962, R471, E876, E871, ...]  998411::20170123                                [990410::20170121]      W         85         0              0                 6                  0                     01     2017-01-21                 0                     00     2017-01-27"
+       "0      729810  21712640027              N390     [B962, E86, N1791, N183, I1090, ...]                                                                  []      W         90         0              0                 1                  0                     01     2017-04-23                 0                     00     2017-04-24\n",
+       "1      729824  20197613027              I480  [I1190, Z954, I7020, Z9588, E1190, ...]  890A42::20170926                                  [9969::20171002]      W         91         0              0                10                  0                     01     2017-09-25                 0                     00     2017-10-05\n",
+       "2      729949  21945623027               N40         [N3941, N184, E871, I1000, K920]    6022::20170802                                  [5718::20170802]      M         76         0              0                 3                  0                     01     2017-08-02                 0                     00     2017-08-05\n",
+       "3      729965  21395996027              K565      [Z960, I1090, Z855, R18, A099, ...]    5459::20171221  [5425::20171221, 9607::20171220, 9915::20171222]      M         71         0              0                11                  0                     01     2017-12-20                 0                     00     2017-12-31\n",
+       "4      729971  20418260027              J100      [N390, B962, R471, E876, E871, ...]  998411::20170123                                [990410::20170121]      W         85         0              0                 6                  0                     01     2017-01-21                 0                     00     2017-01-27"
       ]
      },
      "execution_count": 4,
@@ -743,8 +743,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:56:22.159 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 216 cases ...\n",
-      "2022-11-14 09:56:23.251 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 216 cases into: 216 revisions, 1966 diagnoses rows, 759 procedure rows\n"
+      "2022-11-21 09:31:32.047 | INFO     | src.revised_case_normalization.notebook_functions.group:group:86 - Grouping 216 cases ...\n",
+      "2022-11-21 09:31:33.290 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:91 - Grouped 216 cases into: 216 revisions, 1966 diagnoses rows, 759 procedure rows\n"
      ]
     }
    ],
@@ -796,7 +796,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>88497</td>\n",
+       "      <td>729810</td>\n",
        "      <td>L63D</td>\n",
        "      <td>0.67</td>\n",
        "      <td>0.27</td>\n",
@@ -805,7 +805,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>88511</td>\n",
+       "      <td>729824</td>\n",
        "      <td>F71B</td>\n",
        "      <td>0.74</td>\n",
        "      <td>0.74</td>\n",
@@ -814,7 +814,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>88636</td>\n",
+       "      <td>729949</td>\n",
        "      <td>M02A</td>\n",
        "      <td>1.24</td>\n",
        "      <td>1.24</td>\n",
@@ -823,7 +823,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>88652</td>\n",
+       "      <td>729965</td>\n",
        "      <td>G04B</td>\n",
        "      <td>3.21</td>\n",
        "      <td>3.21</td>\n",
@@ -832,7 +832,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>88658</td>\n",
+       "      <td>729971</td>\n",
        "      <td>E77D</td>\n",
        "      <td>1.18</td>\n",
        "      <td>1.18</td>\n",
@@ -850,7 +850,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>211</th>\n",
-       "      <td>114770</td>\n",
+       "      <td>756006</td>\n",
        "      <td>I10A</td>\n",
        "      <td>2.67</td>\n",
        "      <td>2.67</td>\n",
@@ -859,7 +859,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>212</th>\n",
-       "      <td>114831</td>\n",
+       "      <td>756067</td>\n",
        "      <td>X06A</td>\n",
        "      <td>2.96</td>\n",
        "      <td>2.96</td>\n",
@@ -868,7 +868,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>213</th>\n",
-       "      <td>114935</td>\n",
+       "      <td>756171</td>\n",
        "      <td>F75A</td>\n",
        "      <td>1.60</td>\n",
        "      <td>1.60</td>\n",
@@ -877,7 +877,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>214</th>\n",
-       "      <td>115253</td>\n",
+       "      <td>756489</td>\n",
        "      <td>I46A</td>\n",
        "      <td>2.66</td>\n",
        "      <td>2.66</td>\n",
@@ -886,7 +886,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>215</th>\n",
-       "      <td>115403</td>\n",
+       "      <td>756639</td>\n",
        "      <td>L63D</td>\n",
        "      <td>0.67</td>\n",
        "      <td>0.67</td>\n",
@@ -900,17 +900,17 @@
       ],
       "text/plain": [
        "     aimedic_id   drg  drg_cost_weight  effective_cost_weight  pccl revision_date\n",
-       "0         88497  L63D             0.67                   0.27     3    2022-12-31\n",
-       "1         88511  F71B             0.74                   0.74     3    2022-12-31\n",
-       "2         88636  M02A             1.24                   1.24     4    2022-12-31\n",
-       "3         88652  G04B             3.21                   3.21     4    2022-12-31\n",
-       "4         88658  E77D             1.18                   1.18     4    2022-12-31\n",
+       "0        729810  L63D             0.67                   0.27     3    2022-12-31\n",
+       "1        729824  F71B             0.74                   0.74     3    2022-12-31\n",
+       "2        729949  M02A             1.24                   1.24     4    2022-12-31\n",
+       "3        729965  G04B             3.21                   3.21     4    2022-12-31\n",
+       "4        729971  E77D             1.18                   1.18     4    2022-12-31\n",
        "..          ...   ...              ...                    ...   ...           ...\n",
-       "211      114770  I10A             2.67                   2.67     4    2022-12-31\n",
-       "212      114831  X06A             2.96                   2.96     4    2022-12-31\n",
-       "213      114935  F75A             1.60                   1.60     4    2022-12-31\n",
-       "214      115253  I46A             2.66                   2.66     4    2022-12-31\n",
-       "215      115403  L63D             0.67                   0.67     3    2022-12-31\n",
+       "211      756006  I10A             2.67                   2.67     4    2022-12-31\n",
+       "212      756067  X06A             2.96                   2.96     4    2022-12-31\n",
+       "213      756171  F75A             1.60                   1.60     4    2022-12-31\n",
+       "214      756489  I46A             2.66                   2.66     4    2022-12-31\n",
+       "215      756639  L63D             0.67                   0.67     3    2022-12-31\n",
        "\n",
        "[216 rows x 6 columns]"
       ]
@@ -939,13 +939,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:56:23.267 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 216 cases into the 'Revisions' table ...\n",
-      "2022-11-14 09:56:24.527 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 216 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-14 09:56:24.858 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 216 cases into the 'Revisions' table\n",
-      "2022-11-14 09:56:24.865 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1966 rows into the 'Diagnoses' table ...\n",
-      "2022-11-14 09:56:33.588 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1966 rows into the 'Diagnoses' table\n",
-      "2022-11-14 09:56:33.596 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 759 rows into the 'Procedures' table ...\n",
-      "2022-11-14 09:56:35.536 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 759 rows into the 'Procedures' table\n"
+      "2022-11-21 09:31:33.309 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:259 - Trying to insert 216 cases into the 'Revisions' table ...\n",
+      "2022-11-21 09:31:38.677 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:296 - Inserted 216 cases into the 'Revisions' table\n",
+      "2022-11-21 09:31:38.681 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:309 - Trying to insert 1966 rows into the 'Diagnoses' table ...\n",
+      "2022-11-21 09:31:54.413 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:347 - Inserted 1966 rows into the 'Diagnoses' table\n",
+      "2022-11-21 09:31:54.416 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:358 - Trying to insert 759 rows into the 'Procedures' table ...\n",
+      "2022-11-21 09:32:03.398 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:404 - Inserted 759 rows into the 'Procedures' table\n"
      ]
     }
    ],
