--- a/src/revised_case_normalization/Winterthur_2020_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2020_normalization.ipynb
@@ -53,14 +53,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='KSW', year='2020', sheet='Änderungen_Winterthur_2020')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='Kantonsspital Winterthur', year='2020', sheet='Änderungen_Winterthur_2020')\n"
      ]
     }
    ],
    "source": [
     "file_info = FileInfo(\n",
     "         os.path.join(ROOT_DIR, 'raw_data/Winterthur.xlsx'),\n",
-    "         'KSW',\n",
+    "         'Kantonsspital Winterthur',\n",
     "         '2020',\n",
     "         'Änderungen_Winterthur_2020')\n",
     "\n",
@@ -82,9 +82,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-15 13:53:36.605 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 214 cases for KSW 2020\n",
-      "2022-11-15 13:53:36.614 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:65 - 41/214 rows were deleted because contained NaNs\n",
-      "2022-11-15 13:53:36.616 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:77 - TYPES:\n",
+      "2022-11-21 09:44:31.424 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 214 cases for Kantonsspital Winterthur 2020\n",
+      "2022-11-21 09:44:31.428 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:61 - 41/214 rows were deleted because contained NaNs\n",
+      "2022-11-21 09:44:31.430 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "fid                       string\n",
@@ -114,14 +114,14 @@
       "unnamed: 26               string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-15 13:53:36.664 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-15 13:53:36.672 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-15 13:53:36.681 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
+      "2022-11-21 09:44:31.442 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-21 09:44:31.449 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 09:44:31.457 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
       "row 92: discarded CHOPs after validation {'381618.393188'}\n",
       "row 146: discarded CHOPs after validation {'519913.519914'}\n",
-      "2022-11-15 13:53:36.690 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-15 13:53:36.691 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-15 13:53:36.707 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 32 rows were affected:\n",
+      "2022-11-21 09:44:31.465 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 09:44:31.466 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 09:44:31.483 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 32 rows were affected:\n",
       "row 16: primary diagnosis K720 => K703\n",
       "row 18: primary diagnosis A4158 => K8030\n",
       "row 19: primary diagnosis I745 => I7022\n",
@@ -154,7 +154,7 @@
       "row 200: primary diagnosis I1190 => I1100\n",
       "row 211: primary diagnosis R502 => N390\n",
       "row 213: primary diagnosis R060 => I5012\n",
-      "2022-11-15 13:53:36.710 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:115 - Completed validation\n"
+      "2022-11-21 09:44:31.487 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -446,8 +446,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-15 13:53:37.900 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 13056 rows from the DB, for the hospital 'KSW' in 2020\n",
-      "2022-11-15 13:53:37.915 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:47 - 3 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-21 09:44:32.804 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:95 - Read 13039 rows from the DB, for the hospital 'Kantonsspital Winterthur' in 2020\n",
+      "2022-11-21 09:44:32.815 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:51 - 3 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     },
     {
@@ -493,7 +493,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>389189</td>\n",
+       "      <td>784352</td>\n",
        "      <td>21320891027</td>\n",
        "      <td>L270</td>\n",
        "      <td>[I1090, I481, Z921, G406, I8720, ...]</td>\n",
@@ -513,7 +513,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>389250</td>\n",
+       "      <td>784413</td>\n",
        "      <td>20071661027</td>\n",
        "      <td>C9000</td>\n",
        "      <td>[N1793, I481, Z921, E785, I1090, ...]</td>\n",
@@ -533,7 +533,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>389272</td>\n",
+       "      <td>784435</td>\n",
        "      <td>22769804027</td>\n",
        "      <td>I214</td>\n",
        "      <td>[I5014, I2519, J9601, U990, J9611, ...]</td>\n",
@@ -553,7 +553,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>389290</td>\n",
+       "      <td>784453</td>\n",
        "      <td>20542931027</td>\n",
        "      <td>K255</td>\n",
        "      <td>[B980, K650, S3616, Y849]</td>\n",
@@ -573,7 +573,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>389494</td>\n",
+       "      <td>784657</td>\n",
        "      <td>21347201027</td>\n",
        "      <td>O2688</td>\n",
        "      <td>[O096, Z370]</td>\n",
@@ -597,11 +597,11 @@
       ],
       "text/plain": [
        "   aimedic_id      case_id primary_diagnosis                      secondary_diagnoses primary_procedure                                                    secondary_procedures gender  age_years  age_days  gestation_age  duration_of_stay  ventilation_hours grouper_admission_type admission_date  admission_weight grouper_discharge_type discharge_date\n",
-       "0      389189  21320891027              L270    [I1090, I481, Z921, G406, I8720, ...]    8611::20200129                                                                      []      M         81         0              0                 6                  0                     01     2020-01-29                 0                     00     2020-02-04\n",
-       "1      389250  20071661027             C9000    [N1793, I481, Z921, E785, I1090, ...]  992551::20200130    [4131::20200129, 921906::20200129, 889717::20200127, 9961::20200202]      M         61         0              0                10                  0                     01     2020-01-26                 0                     00     2020-02-05\n",
-       "2      389272  22769804027              I214  [I5014, I2519, J9601, U990, J9611, ...]  99B712::20200517                                                      [998425::20200517]      M         77         0              0                 4                 16                     01     2020-05-17                 0                     07     2020-05-21\n",
-       "3      389290  20542931027              K255                [B980, K650, S3616, Y849]    4441::20200116  [434221::20200116, 5425::20200116, 542110::20200116, 99B811::20200116]      M         42         0              0                 7                  0                     01     2020-01-16                 0                     00     2020-01-23\n",
-       "4      389494  21347201027             O2688                             [O096, Z370]  741X10::20191230                                                      [741X20::20191230]      W         32         0              0                 4                  0                     01     2019-12-30                 0                     00     2020-01-03"
+       "0      784352  21320891027              L270    [I1090, I481, Z921, G406, I8720, ...]    8611::20200129                                                                      []      M         81         0              0                 6                  0                     01     2020-01-29                 0                     00     2020-02-04\n",
+       "1      784413  20071661027             C9000    [N1793, I481, Z921, E785, I1090, ...]  992551::20200130    [4131::20200129, 921906::20200129, 889717::20200127, 9961::20200202]      M         61         0              0                10                  0                     01     2020-01-26                 0                     00     2020-02-05\n",
+       "2      784435  22769804027              I214  [I5014, I2519, J9601, U990, J9611, ...]  99B712::20200517                                                      [998425::20200517]      M         77         0              0                 4                 16                     01     2020-05-17                 0                     07     2020-05-21\n",
+       "3      784453  20542931027              K255                [B980, K650, S3616, Y849]    4441::20200116  [434221::20200116, 5425::20200116, 542110::20200116, 99B811::20200116]      M         42         0              0                 7                  0                     01     2020-01-16                 0                     00     2020-01-23\n",
+       "4      784657  21347201027             O2688                             [O096, Z370]  741X10::20191230                                                      [741X20::20191230]      W         32         0              0                 4                  0                     01     2019-12-30                 0                     00     2020-01-03"
       ]
      },
      "execution_count": 4,
@@ -798,8 +798,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-15 13:53:38.541 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 170 cases ...\n",
-      "2022-11-15 13:53:40.606 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 170 cases into: 170 revisions, 1760 diagnoses rows, 655 procedure rows\n"
+      "2022-11-21 09:44:34.287 | INFO     | src.revised_case_normalization.notebook_functions.group:group:86 - Grouping 170 cases ...\n",
+      "2022-11-21 09:44:35.636 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:91 - Grouped 170 cases into: 170 revisions, 1760 diagnoses rows, 655 procedure rows\n"
      ]
     }
    ],
@@ -851,7 +851,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>389189</td>\n",
+       "      <td>784352</td>\n",
        "      <td>J61D</td>\n",
        "      <td>0.72</td>\n",
        "      <td>0.72</td>\n",
@@ -860,7 +860,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>389250</td>\n",
+       "      <td>784413</td>\n",
        "      <td>R61C</td>\n",
        "      <td>1.74</td>\n",
        "      <td>1.74</td>\n",
@@ -869,7 +869,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>389272</td>\n",
+       "      <td>784435</td>\n",
        "      <td>F60A</td>\n",
        "      <td>1.36</td>\n",
        "      <td>1.36</td>\n",
@@ -878,7 +878,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>389290</td>\n",
+       "      <td>784453</td>\n",
        "      <td>G19A</td>\n",
        "      <td>2.57</td>\n",
        "      <td>2.57</td>\n",
@@ -887,7 +887,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>389494</td>\n",
+       "      <td>784657</td>\n",
        "      <td>O01F</td>\n",
        "      <td>1.01</td>\n",
        "      <td>1.01</td>\n",
@@ -905,7 +905,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>165</th>\n",
-       "      <td>401689</td>\n",
+       "      <td>796835</td>\n",
        "      <td>G04Z</td>\n",
        "      <td>3.18</td>\n",
        "      <td>3.18</td>\n",
@@ -914,7 +914,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>166</th>\n",
-       "      <td>401699</td>\n",
+       "      <td>796845</td>\n",
        "      <td>H09A</td>\n",
        "      <td>3.23</td>\n",
        "      <td>3.23</td>\n",
@@ -923,7 +923,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>167</th>\n",
-       "      <td>401715</td>\n",
+       "      <td>796861</td>\n",
        "      <td>F59F</td>\n",
        "      <td>0.97</td>\n",
        "      <td>1.49</td>\n",
@@ -932,7 +932,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>168</th>\n",
-       "      <td>401837</td>\n",
+       "      <td>796983</td>\n",
        "      <td>G48C</td>\n",
        "      <td>0.95</td>\n",
        "      <td>0.95</td>\n",
@@ -941,7 +941,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>169</th>\n",
-       "      <td>402006</td>\n",
+       "      <td>797152</td>\n",
        "      <td>H64A</td>\n",
        "      <td>1.22</td>\n",
        "      <td>1.22</td>\n",
@@ -955,17 +955,17 @@
       ],
       "text/plain": [
        "     aimedic_id   drg  drg_cost_weight  effective_cost_weight  pccl revision_date\n",
-       "0        389189  J61D             0.72                   0.72     3    2022-12-31\n",
-       "1        389250  R61C             1.74                   1.74     4    2022-12-31\n",
-       "2        389272  F60A             1.36                   1.36     4    2022-12-31\n",
-       "3        389290  G19A             2.57                   2.57     4    2022-12-31\n",
-       "4        389494  O01F             1.01                   1.01     0    2022-12-31\n",
+       "0        784352  J61D             0.72                   0.72     3    2022-12-31\n",
+       "1        784413  R61C             1.74                   1.74     4    2022-12-31\n",
+       "2        784435  F60A             1.36                   1.36     4    2022-12-31\n",
+       "3        784453  G19A             2.57                   2.57     4    2022-12-31\n",
+       "4        784657  O01F             1.01                   1.01     0    2022-12-31\n",
        "..          ...   ...              ...                    ...   ...           ...\n",
-       "165      401689  G04Z             3.18                   3.18     4    2022-12-31\n",
-       "166      401699  H09A             3.23                   3.23     4    2022-12-31\n",
-       "167      401715  F59F             0.97                   1.49     3    2022-12-31\n",
-       "168      401837  G48C             0.95                   0.95     3    2022-12-31\n",
-       "169      402006  H64A             1.22                   1.22     4    2022-12-31\n",
+       "165      796835  G04Z             3.18                   3.18     4    2022-12-31\n",
+       "166      796845  H09A             3.23                   3.23     4    2022-12-31\n",
+       "167      796861  F59F             0.97                   1.49     3    2022-12-31\n",
+       "168      796983  G48C             0.95                   0.95     3    2022-12-31\n",
+       "169      797152  H64A             1.22                   1.22     4    2022-12-31\n",
        "\n",
        "[170 rows x 6 columns]"
       ]
@@ -994,13 +994,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-15 13:53:40.624 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 170 cases into the 'Revisions' table ...\n",
-      "2022-11-15 13:53:41.220 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 170 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-15 13:53:41.474 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 170 cases into the 'Revisions' table\n",
-      "2022-11-15 13:53:41.482 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1760 rows into the 'Diagnoses' table ...\n",
-      "2022-11-15 13:53:46.770 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1760 rows into the 'Diagnoses' table\n",
-      "2022-11-15 13:53:46.771 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 655 rows into the 'Procedures' table ...\n",
-      "2022-11-15 13:53:48.079 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 655 rows into the 'Procedures' table\n"
+      "2022-11-21 09:44:35.656 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:259 - Trying to insert 170 cases into the 'Revisions' table ...\n",
+      "2022-11-21 09:44:40.310 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:296 - Inserted 170 cases into the 'Revisions' table\n",
+      "2022-11-21 09:44:40.313 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:309 - Trying to insert 1760 rows into the 'Diagnoses' table ...\n",
+      "2022-11-21 09:44:50.726 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:347 - Inserted 1760 rows into the 'Diagnoses' table\n",
+      "2022-11-21 09:44:50.729 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:358 - Trying to insert 655 rows into the 'Procedures' table ...\n",
+      "2022-11-21 09:44:55.452 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:404 - Inserted 655 rows into the 'Procedures' table\n"
      ]
     }
    ],
