--- a/src/revised_case_normalization/USZ_2018_normalization.ipynb
+++ b/src/revised_case_normalization/USZ_2018_normalization.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Revised case normalization for USZ 2018\n",
+    "# Revised case normalization for Universitätsspital Zürich 2018\n",
     "\n",
     "Notes:\n",
     "\n",
@@ -57,14 +57,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/USZ_2018-2019_20200730.xlsx', hospital_name_db='USZ', year='2018', sheet='Rückmeldungen_USZ_2018')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/USZ_2018-2019_20200730.xlsx', hospital_name_db='Universitätsspital Zürich', year='2018', sheet='Rückmeldungen_USZ_2018')\n"
      ]
     }
    ],
    "source": [
     "file_info=FileInfo(\n",
     "         os.path.join(ROOT_DIR, 'raw_data/USZ_2018-2019_20200730.xlsx'),\n",
-    "         'USZ',\n",
+    "         'Universitätsspital Zürich',\n",
     "         '2018',\n",
     "         'Rückmeldungen_USZ_2018')\n",
     "\n",
@@ -86,8 +86,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-10 14:32:17.118 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 169 cases for USZ 2018\n",
-      "2022-11-10 14:32:17.126 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:60 - TYPES:\n",
+      "2022-11-21 09:28:11.772 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 169 cases for Universitätsspital Zürich 2018\n",
+      "2022-11-21 09:28:11.776 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:61 - 6/169 rows were deleted because contained NaNs\n",
+      "2022-11-21 09:28:11.778 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "case_id                  object\n",
       "patient_id               object\n",
       "kkik                     string\n",
@@ -117,21 +118,20 @@
       "unnamed: 26              string\n",
       "case_id_norm             object\n",
       "dtype: object\n",
-      "2022-11-10 14:32:17.126 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:69 - 6/169 rows were deleted because contained NaNs\n",
-      "2022-11-10 14:32:17.138 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 8 rows were affected:\n",
+      "2022-11-21 09:28:11.789 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 8 rows were affected:\n",
       "row 41: discarded ICDs after validation {'K91.88'}\n",
       "row 43: discarded ICDs after validation {'R65.0'}\n",
-      "row 45: discarded ICDs after validation {'I50.12', 'I42.0', 'I50.01', 'I32.8'}\n",
+      "row 45: discarded ICDs after validation {'I32.8', 'I42.0', 'I50.12', 'I50.01'}\n",
       "row 47: discarded ICDs after validation {'C77.1'}\n",
       "row 79: discarded ICDs after validation {'J96.01'}\n",
       "row 86: discarded ICDs after validation {'B95.48'}\n",
-      "row 114: discarded ICDs after validation {'C77.0', 'I50.01'}\n",
+      "row 114: discarded ICDs after validation {'I50.01', 'C77.0'}\n",
       "row 156: discarded ICDs after validation {'D70.18'}\n",
-      "2022-11-10 14:32:17.147 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-10 14:32:17.156 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-10 14:32:17.203 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-10 14:32:17.203 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-10 14:32:17.218 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 15 rows were affected:\n",
+      "2022-11-21 09:28:11.796 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 09:28:11.804 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-21 09:28:11.846 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 09:28:11.847 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 09:28:11.861 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 15 rows were affected:\n",
       "row 12: primary diagnosis C833 => S4221\n",
       "row 14: primary diagnosis J101 => J100\n",
       "row 27: primary diagnosis R55 => K8050\n",
@@ -147,8 +147,8 @@
       "row 118: primary diagnosis A090 => A0470\n",
       "row 126: primary diagnosis R55 => K8050\n",
       "row 156: primary diagnosis T8683 => C9110\n",
-      "2022-11-10 14:32:17.222 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:105 - Removed 16 rows containing duplicates\n",
-      "2022-11-10 14:32:17.223 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:107 - Completed validation\n"
+      "2022-11-21 09:28:11.863 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:109 - Removed 16 rows containing duplicates\n",
+      "2022-11-21 09:28:11.864 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -438,17 +438,17 @@
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "There is no data for the hospital 'USZ' in 2018",
+     "evalue": "There is no data for the hospital 'Universitätsspital Zürich' in 2018",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Ignore the patient ID in this dataset, because it is encrypted\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cols_to_join\u001b[38;5;241m.\u001b[39mremove(PATIENT_ID_COL)\n\u001b[0;32m----> 7\u001b[0m revised_cases, unmatched \u001b[38;5;241m=\u001b[39m revise(file_info, revised_cases_df, validation_cols\u001b[38;5;241m=\u001b[39mcols_to_join)\n\u001b[1;32m      8\u001b[0m revised_cases\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff60454160>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650784472992, __beartype_object_187650780255264, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/revise.py:31\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(file_info, revised_cases_df, validation_cols)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m\"\"\"Match revised cases with Database and return revised cases with aimedic_id and other columns of interests after matching.\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \n\u001b[1;32m     21\u001b[0m \u001b[38;5;124;03m@param file_info: An instance of FileInfo, which contains the name and path of filename, hospital name and year and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m \n\u001b[1;32m     27\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Database() \u001b[38;5;28;01mas\u001b[39;00m db:\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# Read the sociodemographics from the DB, and normalize the case ID by removing leading zeros\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m     cases_in_db \u001b[38;5;241m=\u001b[39m \u001b[43mget_sociodemographics_for_hospital_year\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhospital_name_db\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m     cases_in_db[NORM_CASE_ID_COL] \u001b[38;5;241m=\u001b[39m cases_in_db[CASE_ID_COL]\u001b[38;5;241m.\u001b[39mapply(remove_leading_zeros)\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m# Merge cases in DB with the revised cases\u001b[39;00m\n",
-      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_sociodemographics_for_hospital_year) at 0xffff600bb880>:67\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650785316800, __beartype_object_187650780255264, *args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:88\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(hospital_name, year, session)\u001b[0m\n\u001b[1;32m     86\u001b[0m num_cases_in_db \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_cases_in_db \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no data for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     90\u001b[0m     logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRead \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_cases_in_db\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows from the DB, for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: There is no data for the hospital 'USZ' in 2018"
+      "Cell \u001b[0;32mIn [4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Ignore the patient ID in this dataset, because it is encrypted\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cols_to_join\u001b[38;5;241m.\u001b[39mremove(PATIENT_ID_COL)\n\u001b[0;32m----> 7\u001b[0m revised_cases, unmatched \u001b[38;5;241m=\u001b[39m \u001b[43mrevise\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrevised_cases_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_cols\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcols_to_join\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m revised_cases\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff59884f70>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650895577392, __beartype_object_187650893586544, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/revise.py:35\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(file_info, revised_cases_df, validation_cols)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;124;03m\"\"\"Match revised cases with Database and return revised cases with aimedic_id and other columns of interests after matching.\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \n\u001b[1;32m     25\u001b[0m \u001b[38;5;124;03m@param file_info: An instance of FileInfo, which contains the name and path of filename, hospital name and year and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Database() \u001b[38;5;28;01mas\u001b[39;00m db:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m# Read the sociodemographics from the DB, and normalize the case ID by removing leading zeros\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m     cases_in_db \u001b[38;5;241m=\u001b[39m \u001b[43mget_sociodemographics_for_hospital_year\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhospital_name_db\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m     cases_in_db[NORM_CASE_ID_COL] \u001b[38;5;241m=\u001b[39m cases_in_db[CASE_ID_COL]\u001b[38;5;241m.\u001b[39mapply(remove_leading_zeros)\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;66;03m# Merge cases in DB with the revised cases\u001b[39;00m\n",
+      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_sociodemographics_for_hospital_year) at 0xffff59544820>:67\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650898699552, __beartype_object_187650893586544, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:93\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(hospital_name, year, session)\u001b[0m\n\u001b[1;32m     91\u001b[0m num_cases_in_db \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_cases_in_db \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no data for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     95\u001b[0m     logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRead \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_cases_in_db\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows from the DB, for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: There is no data for the hospital 'Universitätsspital Zürich' in 2018"
      ]
     }
    ],
