--- a/src/revised_case_normalization/USZ_2019_30_04_2020_normalization.ipynb
+++ b/src/revised_case_normalization/USZ_2019_30_04_2020_normalization.ipynb
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/USZ_2018-2019_20200730.xlsx', hospital_name_db='USZ', year='2020', sheet='Rückmeldung_USZ_2019_30.04.2020')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/USZ_2018-2019_20200730.xlsx', hospital_name_db='Universitätsspital Zürich', year='2020', sheet='Rückmeldung_USZ_2019_30.04.2020')\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "\n",
     "file_info = FileInfo(\n",
     "         os.path.join(ROOT_DIR, 'raw_data/USZ_2018-2019_20200730.xlsx'),\n",
-    "         'USZ',\n",
+    "         'Universitätsspital Zürich',\n",
     "         '2020',\n",
     "         'Rückmeldung_USZ_2019_30.04.2020')\n",
     "\n",
@@ -83,8 +83,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 10:11:06.905 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 154 cases for USZ 2020\n",
-      "2022-11-14 10:11:06.911 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-21 09:29:22.067 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 154 cases for Universitätsspital Zürich 2020\n",
+      "2022-11-21 09:29:22.072 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "unnamed: 0           string\n",
       "case_id              object\n",
       "patient_id           object\n",
@@ -111,17 +111,17 @@
       "kommentar usz        string\n",
       "case_id_norm         object\n",
       "dtype: object\n",
-      "2022-11-14 10:11:06.922 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 5 rows were affected:\n",
+      "2022-11-21 09:29:22.083 | INFO     | src.utils.dataframe_utils:validate_icd_codes:71 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': The following 5 rows were affected:\n",
       "row 5: discarded ICDs after validation {'E1191.N133'}\n",
       "row 6: discarded ICDs after validation {'R18.K746.I982'}\n",
       "row 7: discarded ICDs after validation {'I690.Z930'}\n",
       "row 10: discarded ICDs after validation {'G8209.R471'}\n",
       "row 12: discarded ICDs after validation {'E1141.G632'}\n",
-      "2022-11-14 10:11:06.930 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 10:11:06.936 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-14 10:11:06.977 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-14 10:11:06.977 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-14 10:11:06.991 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 19 rows were affected:\n",
+      "2022-11-21 09:29:22.092 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 09:29:22.100 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-21 09:29:22.147 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 09:29:22.148 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 09:29:22.162 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 19 rows were affected:\n",
       "row 2: primary diagnosis R11 => M8088\n",
       "row 20: primary diagnosis M340 => I730\n",
       "row 56: primary diagnosis A418 => A419\n",
@@ -141,7 +141,7 @@
       "row 144: primary diagnosis C61 => A410\n",
       "row 149: primary diagnosis S3618 => C23\n",
       "row 150: primary diagnosis T8902 => A490\n",
-      "2022-11-14 10:11:06.994 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-21 09:29:22.165 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -431,17 +431,17 @@
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "There is no data for the hospital 'USZ' in 2020",
+     "evalue": "There is no data for the hospital 'Universitätsspital Zürich' in 2020",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Ignore the patient ID in this dataset, because it is encrypted\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cols_to_join\u001b[38;5;241m.\u001b[39mremove(PATIENT_ID_COL)\n\u001b[0;32m----> 7\u001b[0m revised_cases, unmatched \u001b[38;5;241m=\u001b[39m revise(file_info, revised_cases_df, validation_cols\u001b[38;5;241m=\u001b[39mcols_to_join)\n\u001b[1;32m      8\u001b[0m revised_cases\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff741240d0>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650983237936, __beartype_object_187650992274960, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/revise.py:31\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(file_info, revised_cases_df, validation_cols)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m\"\"\"Match revised cases with Database and return revised cases with aimedic_id and other columns of interests after matching.\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \n\u001b[1;32m     21\u001b[0m \u001b[38;5;124;03m@param file_info: An instance of FileInfo, which contains the name and path of filename, hospital name and year and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m \n\u001b[1;32m     27\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Database() \u001b[38;5;28;01mas\u001b[39;00m db:\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# Read the sociodemographics from the DB, and normalize the case ID by removing leading zeros\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m     cases_in_db \u001b[38;5;241m=\u001b[39m \u001b[43mget_sociodemographics_for_hospital_year\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhospital_name_db\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m     cases_in_db[NORM_CASE_ID_COL] \u001b[38;5;241m=\u001b[39m cases_in_db[CASE_ID_COL]\u001b[38;5;241m.\u001b[39mapply(remove_leading_zeros)\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m# Merge cases in DB with the revised cases\u001b[39;00m\n",
-      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_sociodemographics_for_hospital_year) at 0xffff6f7f35b0>:67\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187650997576640, __beartype_object_187650992274960, *args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:88\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(hospital_name, year, session)\u001b[0m\n\u001b[1;32m     86\u001b[0m num_cases_in_db \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_cases_in_db \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no data for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     90\u001b[0m     logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRead \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_cases_in_db\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows from the DB, for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: There is no data for the hospital 'USZ' in 2020"
+      "Cell \u001b[0;32mIn [4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Ignore the patient ID in this dataset, because it is encrypted\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cols_to_join\u001b[38;5;241m.\u001b[39mremove(PATIENT_ID_COL)\n\u001b[0;32m----> 7\u001b[0m revised_cases, unmatched \u001b[38;5;241m=\u001b[39m \u001b[43mrevise\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrevised_cases_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_cols\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcols_to_join\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m revised_cases\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[0;32m<@beartype(src.revised_case_normalization.notebook_functions.revise.revise) at 0xffff57a8cca0>:75\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651102104272, __beartype_object_187651110578480, __beartype_getrandbits, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/work/src/revised_case_normalization/notebook_functions/revise.py:35\u001b[0m, in \u001b[0;36mrevise\u001b[0;34m(file_info, revised_cases_df, validation_cols)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;124;03m\"\"\"Match revised cases with Database and return revised cases with aimedic_id and other columns of interests after matching.\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \n\u001b[1;32m     25\u001b[0m \u001b[38;5;124;03m@param file_info: An instance of FileInfo, which contains the name and path of filename, hospital name and year and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Database() \u001b[38;5;28;01mas\u001b[39;00m db:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m# Read the sociodemographics from the DB, and normalize the case ID by removing leading zeros\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m     cases_in_db \u001b[38;5;241m=\u001b[39m \u001b[43mget_sociodemographics_for_hospital_year\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhospital_name_db\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_info\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43myear\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m     cases_in_db[NORM_CASE_ID_COL] \u001b[38;5;241m=\u001b[39m cases_in_db[CASE_ID_COL]\u001b[38;5;241m.\u001b[39mapply(remove_leading_zeros)\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;66;03m# Merge cases in DB with the revised cases\u001b[39;00m\n",
+      "File \u001b[0;32m<@beartype(src.service.bfs_cases_db_service.get_sociodemographics_for_hospital_year) at 0xffff57190700>:67\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(__beartype_func, __beartype_get_violation, __beartype_object_187651115970992, __beartype_object_187651110578480, *args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/work/src/service/bfs_cases_db_service.py:93\u001b[0m, in \u001b[0;36mget_sociodemographics_for_hospital_year\u001b[0;34m(hospital_name, year, session)\u001b[0m\n\u001b[1;32m     91\u001b[0m num_cases_in_db \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_cases_in_db \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no data for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     95\u001b[0m     logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRead \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_cases_in_db\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m rows from the DB, for the hospital \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhospital_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: There is no data for the hospital 'Universitätsspital Zürich' in 2020"
      ]
     }
    ],
