--- a/src/revised_case_normalization/Winterthur_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Winterthur_2018_normalization.ipynb
@@ -55,14 +55,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='KSW', year='2018', sheet='Änderungen Winterthur 2018')\n"
+      "FileInfo(path='/home/jovyan/work/src/revised_case_normalization/raw_data/Winterthur.xlsx', hospital_name_db='Kantonsspital Winterthur', year='2018', sheet='Änderungen Winterthur 2018')\n"
      ]
     }
    ],
    "source": [
     "file_info = FileInfo(\n",
     "         os.path.join(ROOT_DIR, 'raw_data/Winterthur.xlsx'),\n",
-    "         'KSW',\n",
+    "         'Kantonsspital Winterthur',\n",
     "         '2018',\n",
     "         'Änderungen Winterthur 2018')\n",
     "\n",
@@ -85,8 +85,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 12:47:51.966 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 193 cases for KSW 2018\n",
-      "2022-11-16 12:47:51.972 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:70 - TYPES:\n",
+      "2022-11-21 09:33:41.852 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:38 - Read 193 cases for Kantonsspital Winterthur 2018\n",
+      "2022-11-21 09:33:41.856 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:73 - TYPES:\n",
       "tranche                                                 string\n",
       "datum                                                   string\n",
       "case_id                                                 object\n",
@@ -118,14 +118,14 @@
       "vorbereitung fallbesprechung                            string\n",
       "case_id_norm                                            object\n",
       "dtype: object\n",
-      "2022-11-16 12:47:52.018 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-16 12:47:52.026 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-16 12:47:52.034 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
+      "2022-11-21 09:33:41.900 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-21 09:33:41.907 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-21 09:33:41.916 | INFO     | src.utils.dataframe_utils:validate_chop_codes:109 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': The following 2 rows were affected:\n",
       "row 34: discarded CHOPs after validation {' '}\n",
       "row 35: discarded CHOPs after validation {' '}\n",
-      "2022-11-16 12:47:52.043 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-16 12:47:52.044 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-16 12:47:52.060 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 13 rows were affected:\n",
+      "2022-11-21 09:33:41.924 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-21 09:33:41.924 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-21 09:33:41.940 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 13 rows were affected:\n",
       "row 35: primary diagnosis M4856 => S3203\n",
       "row 63: primary diagnosis J4419 => J4410\n",
       "row 64: primary diagnosis J4411 => J4410\n",
@@ -139,7 +139,7 @@
       "row 128: primary diagnosis O458 => O069\n",
       "row 151: primary diagnosis O48 => O85\n",
       "row 189: primary diagnosis N390 => A491\n",
-      "2022-11-16 12:47:52.063 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:108 - Completed validation\n"
+      "2022-11-21 09:33:41.943 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:111 - Completed validation\n"
      ]
     },
     {
@@ -344,7 +344,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 12:47:53.178 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 27501 rows from the DB, for the hospital 'KSW' in 2018\n"
+      "2022-11-21 09:33:48.217 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:95 - Read 27458 rows from the DB, for the hospital 'Kantonsspital Winterthur' in 2018\n",
+      "2022-11-21 09:33:48.237 | WARNING  | src.revised_case_normalization.notebook_functions.revise:revise:51 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     }
    ],
@@ -369,7 +370,99 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age_years</th>\n",
+       "      <th>duration_of_stay</th>\n",
+       "      <th>old_pd</th>\n",
+       "      <th>primary_diagnosis</th>\n",
+       "      <th>bfs_code</th>\n",
+       "      <th>pccl</th>\n",
+       "      <th>drg</th>\n",
+       "      <th>added_icds</th>\n",
+       "      <th>removed_icds</th>\n",
+       "      <th>added_chops</th>\n",
+       "      <th>removed_chops</th>\n",
+       "      <th>case_id_norm</th>\n",
+       "      <th>aimedic_id</th>\n",
+       "      <th>case_id_db</th>\n",
+       "      <th>patient_id_db</th>\n",
+       "      <th>age_days</th>\n",
+       "      <th>admission_weight</th>\n",
+       "      <th>gestation_age</th>\n",
+       "      <th>admission_date</th>\n",
+       "      <th>grouper_admission_type</th>\n",
+       "      <th>discharge_date</th>\n",
+       "      <th>grouper_discharge_type</th>\n",
+       "      <th>ventilation_hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>900481157</td>\n",
+       "      <td>801704</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>J208</td>\n",
+       "      <td>J208</td>\n",
+       "      <td>M400</td>\n",
+       "      <td>3</td>\n",
+       "      <td>E69C</td>\n",
+       "      <td>[Q623]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>22253552027</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      case_id patient_id gender  age_years  duration_of_stay old_pd primary_diagnosis bfs_code  pccl   drg added_icds removed_icds added_chops removed_chops case_id_norm  aimedic_id case_id_db patient_id_db  age_days  admission_weight  gestation_age admission_date grouper_admission_type discharge_date grouper_discharge_type  ventilation_hours\n",
+       "66  900481157     801704      M          2                 6   J208              J208     M400     3  E69C     [Q623]           []          []            []  22253552027         NaN        NaN           NaN       NaN               NaN            NaN            NaN                    NaN            NaN                    NaN                NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if unmatched.shape[0] > 0:\n",
     "    display(unmatched)"
@@ -385,8 +478,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 12:47:53.626 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 193 cases ...\n",
-      "2022-11-16 12:47:54.769 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 193 cases into: 193 revisions, 1785 diagnoses rows, 631 procedure rows\n"
+      "2022-11-21 09:33:48.799 | INFO     | src.revised_case_normalization.notebook_functions.group:group:86 - Grouping 192 cases ...\n",
+      "2022-11-21 09:33:50.052 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:91 - Grouped 192 cases into: 192 revisions, 1781 diagnoses rows, 631 procedure rows\n"
      ]
     }
    ],
@@ -438,7 +531,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>198354</td>\n",
+       "      <td>756721</td>\n",
        "      <td>H61A</td>\n",
        "      <td>1.35</td>\n",
        "      <td>1.35</td>\n",
@@ -447,7 +540,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>198498</td>\n",
+       "      <td>756865</td>\n",
        "      <td>O01D</td>\n",
        "      <td>1.22</td>\n",
        "      <td>1.22</td>\n",
@@ -456,7 +549,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>198565</td>\n",
+       "      <td>756932</td>\n",
        "      <td>E77C</td>\n",
        "      <td>1.13</td>\n",
        "      <td>1.13</td>\n",
@@ -465,7 +558,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>198592</td>\n",
+       "      <td>756959</td>\n",
        "      <td>E69B</td>\n",
        "      <td>0.60</td>\n",
        "      <td>0.60</td>\n",
@@ -474,7 +567,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>198897</td>\n",
+       "      <td>757264</td>\n",
        "      <td>L18A</td>\n",
        "      <td>1.70</td>\n",
        "      <td>1.70</td>\n",
@@ -491,8 +584,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>225152</td>\n",
+       "      <th>187</th>\n",
+       "      <td>783476</td>\n",
        "      <td>E71A</td>\n",
        "      <td>1.37</td>\n",
        "      <td>1.37</td>\n",
@@ -500,8 +593,8 @@
        "      <td>2022-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>225169</td>\n",
+       "      <th>188</th>\n",
+       "      <td>783493</td>\n",
        "      <td>I02B</td>\n",
        "      <td>5.21</td>\n",
        "      <td>5.21</td>\n",
@@ -509,8 +602,8 @@
        "      <td>2022-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>225311</td>\n",
+       "      <th>189</th>\n",
+       "      <td>783635</td>\n",
        "      <td>G72A</td>\n",
        "      <td>0.95</td>\n",
        "      <td>0.95</td>\n",
@@ -518,8 +611,8 @@
        "      <td>2022-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>225633</td>\n",
+       "      <th>190</th>\n",
+       "      <td>783957</td>\n",
        "      <td>L63D</td>\n",
        "      <td>0.65</td>\n",
        "      <td>0.65</td>\n",
@@ -527,8 +620,8 @@
        "      <td>2022-12-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>225783</td>\n",
+       "      <th>191</th>\n",
+       "      <td>784107</td>\n",
        "      <td>H41A</td>\n",
        "      <td>2.38</td>\n",
        "      <td>2.38</td>\n",
@@ -537,24 +630,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>193 rows × 6 columns</p>\n",
+       "<p>192 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     aimedic_id   drg  drg_cost_weight  effective_cost_weight  pccl revision_date\n",
-       "0        198354  H61A             1.35                   1.35     4    2022-12-31\n",
-       "1        198498  O01D             1.22                   1.22     3    2022-12-31\n",
-       "2        198565  E77C             1.13                   1.13     4    2022-12-31\n",
-       "3        198592  E69B             0.60                   0.60     3    2022-12-31\n",
-       "4        198897  L18A             1.70                   1.70     4    2022-12-31\n",
+       "0        756721  H61A             1.35                   1.35     4    2022-12-31\n",
+       "1        756865  O01D             1.22                   1.22     3    2022-12-31\n",
+       "2        756932  E77C             1.13                   1.13     4    2022-12-31\n",
+       "3        756959  E69B             0.60                   0.60     3    2022-12-31\n",
+       "4        757264  L18A             1.70                   1.70     4    2022-12-31\n",
        "..          ...   ...              ...                    ...   ...           ...\n",
-       "188      225152  E71A             1.37                   1.37     4    2022-12-31\n",
-       "189      225169  I02B             5.21                   5.21     4    2022-12-31\n",
-       "190      225311  G72A             0.95                   0.95     4    2022-12-31\n",
-       "191      225633  L63D             0.65                   0.65     3    2022-12-31\n",
-       "192      225783  H41A             2.38                   2.38     4    2022-12-31\n",
+       "187      783476  E71A             1.37                   1.37     4    2022-12-31\n",
+       "188      783493  I02B             5.21                   5.21     4    2022-12-31\n",
+       "189      783635  G72A             0.95                   0.95     4    2022-12-31\n",
+       "190      783957  L63D             0.65                   0.65     3    2022-12-31\n",
+       "191      784107  H41A             2.38                   2.38     4    2022-12-31\n",
        "\n",
-       "[193 rows x 6 columns]"
+       "[192 rows x 6 columns]"
       ]
      },
      "execution_count": 9,
@@ -581,13 +674,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-16 12:47:54.789 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 193 cases into the 'Revisions' table ...\n",
-      "2022-11-16 12:47:55.290 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 193 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-16 12:47:55.371 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 193 cases into the 'Revisions' table\n",
-      "2022-11-16 12:47:55.372 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 1785 rows into the 'Diagnoses' table ...\n",
-      "2022-11-16 12:47:58.580 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 1785 rows into the 'Diagnoses' table\n",
-      "2022-11-16 12:47:58.584 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 631 rows into the 'Procedures' table ...\n",
-      "2022-11-16 12:47:59.333 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 631 rows into the 'Procedures' table\n"
+      "2022-11-21 09:33:50.070 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:259 - Trying to insert 192 cases into the 'Revisions' table ...\n",
+      "2022-11-21 09:33:51.612 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:296 - Inserted 192 cases into the 'Revisions' table\n",
+      "2022-11-21 09:33:51.615 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:309 - Trying to insert 1781 rows into the 'Diagnoses' table ...\n",
+      "2022-11-21 09:34:02.498 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:347 - Inserted 1781 rows into the 'Diagnoses' table\n",
+      "2022-11-21 09:34:02.502 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:358 - Trying to insert 631 rows into the 'Procedures' table ...\n",
+      "2022-11-21 09:34:04.235 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:404 - Inserted 631 rows into the 'Procedures' table\n"
      ]
     }
    ],
